--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*  
-Theme Name: WordPress Default
-Theme URI: http://wordpress.org/
-Description: The default WordPress theme based on the famous <a href="http://binarybonsai.com/kubrick/">Kubrick</a>.
-Version: 1.6
-Author: Michael Heilemann
+Theme Name: Phronema
+Theme URI: http://www.phronema.eu
+Description: Adapted from the default WordPress theme based on the famous <a href="http://binarybonsai.com/kubrick/">Kubrick</a>.
+Version: 1
+Author: benglynn.net adapted Michael Heilemann's theme
 Author URI: http://binarybonsai.com/
 
 	Kubrick v1.5
